--- a/tueats.html
+++ b/tueats.html
@@ -6,25 +6,31 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>TUeats</title>
+        <title>TUEats</title>
         <link rel="stylesheet" href="tueats.css">
     </head>
 
     <body>
-        <h1 >Welcome to TU Eats</h1>
-        <form method="get" action="">
+        <div class="header-container">
+            <h1>Welcome to TU Eats</h1>
+            <img src="Towson_University_logo_horiz_2019.png" alt="Towson University logo">
+        </div>
+        <form method="GET" action="tueats_completed.html">
             <fieldset>
                 <legend>Sign Up</legend>
-                <label for="username" id="username-label">Username <input id="username" name="username" type="text" placeholder="Jsmith123" required></input></label>
-                <label for ="email" id="email-label">Email <input id="email" name="email" type="email" placeholder="Jsmith@students.towson.edu" required></input></label>
-                <label for ="referral-code" id="code">Referral code <input id="referral-code" name="referral-code" type="text" placeholder="TU20OFF"></input></label>
-                <label for ="password" id="password-label">Password <input id="password" name="password" type="password" required></input></label>
-                <label for ="password-verify" id="verify-label">Password <input id="password-verify" name="password-verify" type="password" required></input></label>
-                <label for="news-letter" id="news-letter-label"><input id="newsletter" type="checkbox"> Sign up for our news letter</label>
+                <label id="username-label">Username: <input id="username" name="username" type="text" placeholder="Jsmith123" required></label>
+                <label id="email-label">Email: <input id="email" name="email" type="email" placeholder="Jsmith@students.towson.edu" required></label>
+                <label id="code">Referral code: <input id="referral-code" name="referral-code" type="text" placeholder="TU20OFF"></label>
+                <label id="password-label">Password: <input id="password" name="password" type="password" required></label>
+                <label id="verify-label">Verify password: <input id="password-verify" name="password-verify" type="password" required></label>
+                <label id="news-letter-label"><input id="newsletter" type="checkbox"> Sign up for our newsletter?</label>
+                <button type="submit">Submit</button>
             </fieldset>
 
             <fieldset>
+                <legend>Menu</legend>
                 <table>
+                    <caption>Menu is subject to change, please visit our main site for more information <a href="https://www.towson.edu/" target="_blank">Towson Website</a></caption>
                     <tr>
                         <th></th>
                         <th>Name</th>
@@ -32,26 +38,24 @@
                         <th>Calories</th>
                     </tr>
                     <tr>
-                        <td>item 1</td>
+                        <td>Item 1</td>
                         <td>Burger</td>
                         <td>$8</td>
                         <td>550</td>
                     </tr> <tr>
                     </tr>
-                        <td>item 2</td>
+                        <td>Item 2</td>
                         <td>Mozzarella Sticks</td>
                         <td>$7</td>
                         <td rowspan="2">400</td>
                     </tr>
                     <tr>
-                        <td>item 3</td>
+                        <td>Item 3</td>
                         <td>Fries</td>
                         <td>$4</td>
                     </tr>
                 </table>
-                <caption>Menu is subject to change, please visit our main site for more information <a href="Towson.edu">Towson Website</a></caption>
             </fieldset>
-            <button type="submit">Submit</button>
         </form>
     </body>
 
