--- a/tueats.html
+++ b/tueats.html
@@ -18,12 +18,12 @@
         <form method="GET" action="tueats_completed.html">
             <fieldset>
                 <legend>Sign Up</legend>
-                <label id="username-label">Username: <input id="username" name="username" type="text" placeholder="Jsmith123" required></label>
+                <label id="username-label">Username: <input id="username" name="email" type="text" placeholder="Jsmith123" required></label>
                 <label id="email-label">Email: <input id="email" name="email" type="email" placeholder="Jsmith@students.towson.edu" required></label>
                 <label id="code">Referral code: <input id="referral-code" name="referral-code" type="text" placeholder="TU20OFF"></label>
                 <label id="password-label">Password: <input id="password" name="password" type="password" required></label>
                 <label id="verify-label">Verify password: <input id="password-verify" name="password-verify" type="password" required></label>
-                <label id="news-letter-label"><input id="newsletter" type="checkbox"> Sign up for our newsletter?</label>
+                <label id="news-letter-label"><input id="newsletter" name="news-letter" type="checkbox"> Sign up for our newsletter?</label>
                 <button type="submit">Submit</button>
             </fieldset>
 
