--- a/tueats.html
+++ b/tueats.html
@@ -18,12 +18,12 @@
         <form id="tuEatsForm" method="GET" action="tueats_completed.html">
             <fieldset>
                 <legend>Sign Up</legend>
-                <label id="username-label">Username: <input id="username" name="email" type="text" placeholder="Jsmith123" required></label>
+                <label id="username-label">Username: <input id="username" name="username" type="text" placeholder="Jsmith123" required></label>
                 <label id="email-label">Email: <input id="email" name="email" type="email" placeholder="Jsmith@students.towson.edu" required></label>
                 <label id="code-label">Referral code: <input id="referral-code" name="referral-code" type="text" placeholder="TU20OFF"></label>
                 <p id="invalid-code-message"></p>
-                <label id="password-label">Password: <input id="password" name="password" type="password" required></label>
-                <label id="verify-password-label">Verify password: <input id="verify-password" name="password-verify" type="password" required></label>
+                <label id="password-label">Password: <input id="password" name="password" type="password" pattern=".{8,}" placeholder="8 or more characters" required></label> 
+                <label id="verify-password-label">Verify password: <input id="verify-password" name="password-verify" type="password" placeholder="Re-type password" required></label>
                 <label id="news-letter-label"><input id="newsletter" name="news-letter" type="checkbox"> Sign up for our newsletter?</label>
                 <button id="submit" type="submit">Submit</button>
             </fieldset>
